--- a/CareDirection/CareDirection/Resources/Storyboard/Ingredient.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/Ingredient.storyboard
@@ -15,40 +15,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nOh-FA-fk9">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nOh-FA-fk9">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="nameCell" rowHeight="61" id="KBC-N1-oRA" customClass="IngredientNameCell" customModule="CareDirection" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="61"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="nameCell" rowHeight="70" id="KBC-N1-oRA" customClass="IngredientNameCell" customModule="CareDirection" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KBC-N1-oRA" id="bi0-Ko-2gQ">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="61"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="성분 이름은 여기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2px-Jw-eGj">
-                                                    <rect key="frame" x="18" y="20" width="339" height="22"/>
+                                                    <rect key="frame" x="18" y="5" width="118.5" height="60"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="339" id="813-yV-9Zd"/>
-                                                        <constraint firstAttribute="height" constant="22" id="dW6-8O-c5r"/>
+                                                        <constraint firstAttribute="height" constant="60" id="MAB-Sg-COu"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="18"/>
                                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="2px-Jw-eGj" firstAttribute="leading" secondItem="bi0-Ko-2gQ" secondAttribute="leading" constant="18" id="5PS-xf-Wxv"/>
+                                                <constraint firstAttribute="bottom" secondItem="2px-Jw-eGj" secondAttribute="bottom" constant="5" id="aHz-Jz-0rw"/>
+                                                <constraint firstItem="2px-Jw-eGj" firstAttribute="top" secondItem="bi0-Ko-2gQ" secondAttribute="top" constant="5" id="vEE-2e-ZoN"/>
+                                            </constraints>
                                         </tableViewCellContentView>
-                                        <constraints>
-                                            <constraint firstItem="2px-Jw-eGj" firstAttribute="leading" secondItem="KBC-N1-oRA" secondAttribute="leading" constant="18" id="0bd-8d-F0T"/>
-                                            <constraint firstAttribute="bottom" secondItem="2px-Jw-eGj" secondAttribute="bottom" constant="19" id="ET7-wh-ker"/>
-                                            <constraint firstItem="2px-Jw-eGj" firstAttribute="top" secondItem="KBC-N1-oRA" secondAttribute="top" constant="20" id="TrV-RV-j3Q"/>
-                                        </constraints>
                                         <connections>
-                                            <outlet property="nameLabel" destination="2px-Jw-eGj" id="tTq-Kf-4Nq"/>
+                                            <outlet property="nameLabel" destination="2px-Jw-eGj" id="mJ0-nC-Ul1"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="imageCell" rowHeight="160" id="MqB-D2-cI5" customClass="IngredientImageCell" customModule="CareDirection" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="89" width="375" height="160"/>
+                                        <rect key="frame" x="0.0" y="98" width="375" height="160"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MqB-D2-cI5" id="XGm-qO-Cb0">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="160"/>
@@ -56,42 +55,38 @@
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2Tv-Em-UKp">
                                                     <rect key="frame" x="18" y="0.0" width="339" height="160"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="160" id="BRz-0l-4fh"/>
-                                                        <constraint firstAttribute="width" constant="339" id="UWV-kS-ToM"/>
-                                                    </constraints>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="2Tv-Em-UKp" firstAttribute="top" secondItem="XGm-qO-Cb0" secondAttribute="top" id="9QJ-hO-Sn5"/>
+                                                <constraint firstAttribute="bottom" secondItem="2Tv-Em-UKp" secondAttribute="bottom" id="QIU-dk-SlH"/>
+                                                <constraint firstItem="2Tv-Em-UKp" firstAttribute="leading" secondItem="XGm-qO-Cb0" secondAttribute="leading" constant="18" id="Uob-0K-sdD"/>
+                                                <constraint firstAttribute="trailing" secondItem="2Tv-Em-UKp" secondAttribute="trailing" constant="18" id="XXe-ko-4t0"/>
+                                            </constraints>
                                         </tableViewCellContentView>
-                                        <constraints>
-                                            <constraint firstItem="2Tv-Em-UKp" firstAttribute="leading" secondItem="MqB-D2-cI5" secondAttribute="leading" constant="18" id="Cr2-KH-JBh"/>
-                                            <constraint firstAttribute="bottom" secondItem="2Tv-Em-UKp" secondAttribute="bottom" id="G4n-SC-fKH"/>
-                                            <constraint firstItem="2Tv-Em-UKp" firstAttribute="top" secondItem="MqB-D2-cI5" secondAttribute="top" id="cfl-Kl-6hC"/>
-                                        </constraints>
                                         <connections>
                                             <outlet property="ingredientImage" destination="2Tv-Em-UKp" id="fag-Z4-EHJ"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="explainCell" id="o4t-hK-uCh" customClass="IngredientExplainCell" customModule="CareDirection" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="249" width="375" height="44.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="explainCell" rowHeight="80" id="o4t-hK-uCh" customClass="IngredientExplainCell" customModule="CareDirection" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="258" width="375" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="o4t-hK-uCh" id="pdl-Bt-MbM">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7uK-H2-862">
-                                                    <rect key="frame" x="18" y="15" width="339" height="21.5"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="339" id="KRt-Vi-Ps0"/>
-                                                    </constraints>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7uK-H2-862">
+                                                    <rect key="frame" x="18" y="10" width="342" height="60"/>
                                                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Thin" family="Apple SD Gothic Neo" pointSize="17"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="7uK-H2-862" firstAttribute="top" secondItem="pdl-Bt-MbM" secondAttribute="top" constant="15" id="6kr-Et-tZ5"/>
-                                                <constraint firstAttribute="bottom" secondItem="7uK-H2-862" secondAttribute="bottom" constant="8" id="V3P-6R-kAW"/>
+                                                <constraint firstAttribute="trailing" secondItem="7uK-H2-862" secondAttribute="trailing" constant="15" id="873-SS-naS"/>
+                                                <constraint firstItem="7uK-H2-862" firstAttribute="top" secondItem="pdl-Bt-MbM" secondAttribute="top" constant="10" id="8Xp-6A-0jq"/>
+                                                <constraint firstAttribute="bottom" secondItem="7uK-H2-862" secondAttribute="bottom" constant="10" id="F2S-81-H9y"/>
                                                 <constraint firstItem="7uK-H2-862" firstAttribute="leading" secondItem="pdl-Bt-MbM" secondAttribute="leading" constant="18" id="sKk-Vo-iyC"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -101,6 +96,9 @@
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BLO-qI-HXl" id="obY-lt-qSp"/>
+                                </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8P1-Od-oj3">
                                 <rect key="frame" x="122" y="613" width="130" height="34"/>
