--- a/CareDirection/CareDirection/Resources/Storyboard/Survey.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/Survey.storyboard
@@ -10,7 +10,7 @@
         <!--SurveyVC-->
         <scene sceneID="zLD-fK-9S2">
             <objects>
-                <viewController storyboardIdentifier="SurveyVC" id="SWt-Oh-u32" customClass="SurveyVC" customModule="CareDirection" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SurveyVC" modalPresentationStyle="fullScreen" id="SWt-Oh-u32" customClass="SurveyVC" customModule="CareDirection" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uOI-75-lSd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
